# sprinkler

./: Cargo.toml  config.json  deploy.sh
frontend/: index.html
frontend/js/: index.js
src/: configuration.rs  main.rs  schedule.rs  time.rs  timer.rs
