[package]
name = "sprinkler"
version = "0.1.0"
authors = ["oskarbraten <oskar.braten@outlook.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
serde_derive = "1.0.92"

log = "0.4.6"
env_logger = "0.6.1"
actix-web = "1.0.0"
actix-rt = "0.2.2"