[package]
name = "sprinkler"
version = "0.1.0"
authors = ["oskarbraten <oskar.braten@outlook.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
serde_derive = "1.0.93"

log = "0.4.6"
env_logger = "0.6.1"
actix-web = "1.0.2"
actix-rt = "0.2.3"
actix-files = "0.1.2"
chrono = "0.4.6"

rppal = "0.11.3"